force-app/main/default/objects/Milestone1_Task__c/fields/Last_Day_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_Reviewed__c</fullName>
    <label>Last Day Reviewed</label>
    <type>Date</type>
</CustomField>