force-app/main/default/objects/Milestone1_Task__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <label>Sprint</label>
    <length>200</length>
    <type>Text</type>
</CustomField>