force-app/main/default/objects/Milestone1_Task__c/fields/Task_Stage__c.field-meta.xml
<CustomField>
    <fullName>Task_Stage__c</fullName>
    <inlineHelpText>Where is this task on the road to completion?</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Reviewing</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>